# rhaicp

./: Cargo.toml  README.md
src/: lib.rs  main.rs  mcp_module.rs
tests/: mcp_tools.rs  say_hello.rs  write_file.rs
