[package]
name = "rhaicp"
version = "1.0.0"
edition = "2024"
description = "An ACP agent that executes Rhai scripts with MCP tool access"
license = "MIT OR Apache-2.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
repository = "https://github.com/nikomatsakis/rhaicp"
readme = "README.md"
keywords = ["ACP", "Rhai"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
rhai = { version = "1.23.6", features = ["sync"] }
rmcp = { version = "0.12.0", features = ["client", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest"] }
sacp = "10.1.0"
sacp-tokio = "10.1.0"
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
expect-test = "1.5.1"
sacp-conductor = "10.0.1"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
yopo = "10.0.1"
